# netsdk-proxy-to-rtsp

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml
NetSDK/: README.md  setup.sh
config/: .gitignore  README.md
deploy/: Dockerfile  entrypoint.sh  mediamtx.yml
docs/superpowers/notes/: 2026-06-24-on-demand-playlist-cascade.md
docs/superpowers/plans/: 2026-06-24-multi-camera-config.md  2026-06-24-on-demand-streaming.md
docs/superpowers/specs/: 2026-06-24-multi-camera-config-design.md  2026-06-24-on-demand-streaming-design.md
relay/: __init__.py  __main__.py  config.py  dhav.py  manager.py  mediamtx_config.py  pipeline.py  playlist.py  probe.py  publisher.py  sdk_client.py  streams_config.py
scripts/: capture_raw.py
tests/: test_config.py  test_dhav.py  test_mediamtx_config.py  test_pipeline.py  test_playlist.py  test_probe.py  test_probe_format.py  test_publisher.py  test_streams_config.py
