[project]
name = "netsdk-proxy-to-rtsp"
version = "0.1.0"
description = "Proxy a Dahua NetSDK live stream to RTSP without transcoding"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.uv]
# Run from source; do not build/install this project itself.
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
